# zero-raf

./: Cargo.toml  README.md
CMS-Data/PY2022/: 2022 Midyear_Final ICD-10-CM Mappings.csv  2022 Midyear_Final ICD-10-CM Mappings.xlsx  AGESEXV4.TXT  C2419P1M.csv  C2419P1M.stc  D2117P2R  E2122P2M.TXT  E2122P2P.TXT  ESRD-HCC software E2122.87.P2 description.doc  F0522S1Q.TRN  F0522S1Q.TXT  F2122P1R  F2122P1R.TXT  F2222O1P  F2222O1P.TXT  F2422P1M  F2422P1M.TXT  HCC software V2222.79.O1 description.doc  HCC software V2422.86.P1 description.docx  R0520S3Q.TRN  R0522S1M.TXT  R0522S1P.TXT  R05I0ED3.TXT  R05X76H1.TXT  R05X76L1.TXT  RxHCC R0522.76.S1 software description.doc  V21I0ED3.TXT  V2222O1M.TXT  V2222O1P.TXT  V22I0ED3.TXT  V2422P1M.TXT  V2422P1P.TXT  V24I0ED2.TXT
CMS-Data/PY2023/: AGESEXV2.TXT  C2824T2N.csv  C2824T2N.stc  F2823T2N.stc  HCC software V2823.115.T2 description.docx  V28115H1.TXT  V2823T2P.TXT
core/: Cargo.toml
core/src/: lib.rs  utils.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
