[package]
name = "zero-raf-host"
version = "0.1.0"
edition = "2021"

[dependencies]
zero-raf-methods = { path = "../methods" }
zero-raf-core = { path = "../core" }
csv = "1.1"
regex = "1.6.0"
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "6fb72df1284c0cf0a516dd87af193256d1baec81", features = ["std"] }