[package]
name = "zero-raf-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]

[dependencies]
zero-raf-core = { path = "../../core" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "84528d31c0efad566e585aa04a83d6692b32bd16", default-features = false, features = ["std"] }

[patch.crates-io]
crossbeam = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
crossbeam-utils = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
crossbeam-channel = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
radium = { git = "https://github.com/ferrilab/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" } 
